--- a/src/app/components/change-log-list/change-log-list.component.html
+++ b/src/app/components/change-log-list/change-log-list.component.html
@@ -1,8 +1,34 @@
-<div class="container">
-  <div class="col-md-3"></div>
-  <div class="col-md-6 justify-content-center text-center">
+<div class="container justify-content-center text-center">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
     <h3>Lista wiadomości dodanych do systemu</h3>
-    
+
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Wpisz frazę">
+    </mat-form-field>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Nazwa </th>
+        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Data </th>
+        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="content">
+        <th mat-header-cell *matHeaderCellDef> Treść </th>
+        <td mat-cell *matCellDef="let element"> {{element.content}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
   </div>
-  <div class="col-md-3"></div>
+  <div class="col-md-2"></div>
 </div>
