--- a/src/app/components/change-log/change-log.component.html
+++ b/src/app/components/change-log/change-log.component.html
@@ -1,23 +1,23 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 justify-content-center text-center">
-        <h3>ChangeLog</h3>
-        <div class="change-log-box">
-          <div class="change-log-header">
-            <div class="change-log-title col-md-4">
-              WERSJA 0.01
-            </div>
-            <div class="col-md-4"></div>
-            <div class="change-log-datecol-md-4">
-              27.02.1996 r.
-            </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 justify-content-center text-center">
+      <h3>ChangeLog</h3>
+      <div class="change-log-box" *ngFor="let changeLog of changeLogWithDate">
+        <div class="change-log-header">
+          <div class="change-log-title col-md-4">
+            {{changeLog.title}}
           </div>
-          <div class="change-log-content">
-            TESTOWY LOG TESTOWY LOG  TESTOWY LOG TESTOWY LOG TESTOWY LOG TESTOWY LOG TESTOWY LOG TESTOWY LOG TESTOWY LOG
+          <div class="col-md-4"></div>
+          <div class="change-log-datecol-md-4">
+            {{changeLog.date}}
           </div>
         </div>
+        <div class="change-log-content">
+          {{changeLog.content}}
+        </div>
       </div>
-      <div class="col-md-3"></div>
     </div>
+    <div class="col-md-3"></div>
+  </div>
 </div>
